--- a/z2m-rwl020-scenes.yaml
+++ b/z2m-rwl020-scenes.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL020) v3.1.3
+  name: MQTT Philips Hue Dimmer Switch (RWL020) v3.1.4
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -314,13 +314,13 @@ action:
             target:
               entity_id: !input light
             data:
-              transition: >-
+              transition: >
                 {% set lights = expand(target_lights) | selectattr('state', 'eq', 'on') | list %}
                 {% set avg_brightness = (lights | map(attribute='attributes.brightness') | select('number') | list | sum) / (lights | length) %}
                 {% if avg_brightness < 13 %}
-                0
+                  0
                 {% else %}
-                {{ !input transition_time }}
+                  {{ transition_time }}
                 {% endif %}
       - conditions: "{{ command == 'off_hold' }}"
         sequence:
